womtool/src/test/resources/validate/wdl_draft2/invalid/just_braces/error.txt
ERROR: Finished parsing without consuming all tokens.

{}
^
